[gd_scene load_steps=21 format=3 uid="uid://f2ivvhcd2mos"]

[ext_resource type="Script" uid="uid://b8hqqti6jdc8c" path="res://ui/main_menu.gd" id="1_8v85u"]
[ext_resource type="Script" uid="uid://bor2d5txxv10m" path="res://ui/main_menu_camera.gd" id="1_x262b"]
[ext_resource type="PackedScene" uid="uid://bbl15t1j4p6vk" path="res://assets/models/player_models/spyke.tscn" id="2_rn8js"]
[ext_resource type="Shader" uid="uid://dwhqqyst7tpfr" path="res://shaders/post_processing.gdshader" id="3_8v85u"]
[ext_resource type="MeshLibrary" uid="uid://bxah33e5mgkm" path="res://assets/models/WallAndFloor.tres" id="3_nmrkx"]
[ext_resource type="PackedScene" uid="uid://1ltd4vjg1u6c" path="res://assets/models/player_models/dwell.tscn" id="3_uvwf2"]
[ext_resource type="PackedScene" uid="uid://cgwhbrevjmkp8" path="res://assets/models/player_models/jadd.tscn" id="4_youui"]
[ext_resource type="PackedScene" uid="uid://b34gpyfxswijj" path="res://assets/models/player_models/mjartt.tscn" id="5_58pe3"]
[ext_resource type="PackedScene" uid="uid://b0sjapxhxhqvq" path="res://assets/models/player_models/sanchovich.tscn" id="6_g6r01"]
[ext_resource type="Shader" uid="uid://dqj7qnwfwhmlw" path="res://shaders/post_processing2D.gdshader" id="8_youui"]
[ext_resource type="Shader" uid="uid://c8qkcmanwuo1w" path="res://shaders/CRT.gdshader" id="11_58pe3"]
[ext_resource type="AudioStream" uid="uid://dr14qs3l2x2nc" path="res://assets/audio/mainmenuBGM.wav" id="12_g6r01"]
[ext_resource type="Script" uid="uid://dujiwatx1a3rg" path="res://assets/audio/main_menu_BGM.gd" id="13_t3nb0"]
[ext_resource type="AudioStream" uid="uid://bqnhp7l6pimag" path="res://assets/audio/hoverr.wav" id="14_gie3v"]
[ext_resource type="AudioStream" uid="uid://miadcs6yofv7" path="res://assets/audio/click.wav" id="14_pktai"]

[sub_resource type="Environment" id="Environment_nmrkx"]
background_energy_multiplier = 3.0
tonemap_mode = 3
tonemap_exposure = 0.83
tonemap_white = 16.0
fog_enabled = true
fog_light_color = Color(0.52814776, 0.5534628, 0.5801379, 1)
fog_light_energy = 0.55
fog_density = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_58pe3"]
shader = ExtResource("8_youui")
shader_parameter/dither_amount = 0.50999998860048

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x262b"]
render_priority = 0
shader = ExtResource("3_8v85u")
shader_parameter/dither_amount = 0.0999999977648

[sub_resource type="QuadMesh" id="QuadMesh_qo3sn"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6r01"]
shader = ExtResource("11_58pe3")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.30000001425
shader_parameter/scanlines_width = 0.400000019
shader_parameter/grille_opacity = 0.10000000475
shader_parameter/resolution = Vector2(320, 240)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 100.0
shader_parameter/roll_size = 1.0000000475
shader_parameter/roll_variation = 5.0
shader_parameter/distort_intensity = 0.00400000019
shader_parameter/noise_opacity = 0.070000003325
shader_parameter/noise_speed = 8.0
shader_parameter/static_noise_intensity = 0.10000000475
shader_parameter/aberration = 0.00900004792750008
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.010000000475
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 5.0
shader_parameter/vignette_opacity = 0.046000002185

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nmrkx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 2.6, 2)
fov = 90.0
script = ExtResource("1_x262b")

[node name="CharacterPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.5, 0.77)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_nmrkx")
cell_size = Vector3(7, 1, 7)
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 0, 1048577, 0, 65535, 1048577, 65535, 65535, 1048577, 65535, 0, 1048577, 0, 65534, 1048577, 65535, 65534, 1048576, 65534, 65534, 1048576, 65534, 65535, 1048576, 1, 65534, 1048576, 1, 65535, 1048577, 2, 65535, 1048576, 0, 65533, 1048577, 0, 65532, 1048577, 0, 65531, 1048577, 0, 65530, 1048577, 0, 65529, 1048577, 1, 65533, 1441792, 1, 65532, 1441792, 1, 65531, 1441792, 1, 65530, 1441792, 1, 65529, 1441792, 65535, 65533, 1441792, 65535, 65532, 1441792, 65535, 65531, 1441792, 65535, 65530, 1441792, 65535, 65529, 1441792, 1, 65528, 1441792, 65535, 65528, 1441792, 1, 65527, 1441792, 65535, 65527, 1441792, 0, 65528, 1441793, 0, 65527, 1441793, 1, 0, 1441793, 2, 0, 1441793, 65534, 0, 1441793, 524287, 65535, 655364, 524287, 0, 655364, 458752, 0, 655364, 458752, 65535, 655364, 458753, 0, 655364, 458753, 65535, 655364, 458752, 65534, 655364, 458752, 65533, 655364, 458752, 65532, 655364, 458752, 65531, 655364, 458752, 65530, 655364, 458752, 65529, 655364, 458752, 65528, 655364, 458752, 65527, 655364, 458754, 0, 4, 524286, 0, 4)
}
metadata/_editor_floor_ = Vector3(0, 7, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
texture_filter = 1
material = SubResource("ShaderMaterial_58pe3")
use_parent_material = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 960)
render_target_update_mode = 4

[node name="UI" type="Control" parent="CanvasLayer/SubViewportContainer/SubViewport" node_paths=PackedStringArray("camera_3d", "character_pivot", "lbl_name", "lbl_desc")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_8v85u")
camera_3d = NodePath("../../../../Camera3D")
character_pivot = NodePath("../../../../CharacterPivot")
lbl_name = NodePath("CharacterMenu/InfoBox/Name")
lbl_desc = NodePath("CharacterMenu/InfoBox/Description")
character_scenes = Array[PackedScene]([ExtResource("2_rn8js"), ExtResource("3_uvwf2"), ExtResource("4_youui"), ExtResource("5_58pe3"), ExtResource("6_g6r01")])
character_names = Array[String](["Matt", "John", "Plug", "Josh", "Karol"])
character_descs = Array[String](["Strong guy", "Combat ready", "Nerd", "Mentally challenged", "Woman"])

[node name="MainMenu" type="Control" parent="CanvasLayer/SubViewportContainer/SubViewport/UI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 890.0
offset_right = 445.0
offset_bottom = 890.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -179.0
offset_right = 381.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Start"

[node name="CharacterButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Character"

[node name="ExitButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="CharacterMenu" type="Control" parent="CanvasLayer/SubViewportContainer/SubViewport/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu"]
layout_mode = 1
offset_left = 40.0
offset_top = 57.0
offset_right = 357.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 35
text = "Go Back"

[node name="InfoBox" type="VBoxContainer" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu"]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -330.0
offset_right = 0.5
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="Name" type="Label" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/InfoBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.90962505, 0.95, 0.14249997, 1)
theme_override_colors/font_outline_color = Color(0.24110492, 0.23264481, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/InfoBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -150.91998
offset_right = 285.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 3475
dragging_enabled = false
dragger_visibility = 2

[node name="PrevButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 35
text = " < "

[node name="NextButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 35
text = " > "

[node name="SelectButton" type="Button" parent="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -130.0
offset_right = 124.0
offset_bottom = -72.57501
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Select"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4457012, 0, -0.2266064, 0, 0.5, 0, 0.2266064, 0, 0.4457012, 1.5915649, 0.49900305, -0.9232552)
material_override = SubResource("ShaderMaterial_x262b")
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_qo3sn")
skeleton = NodePath("")

[node name="CRT" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CRT"]
material = SubResource("ShaderMaterial_g6r01")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1, 0)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_g6r01")
autoplay = true
script = ExtResource("13_t3nb0")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_gie3v")
volume_db = -10.0
pitch_scale = 1.3

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_pktai")
volume_db = -15.0
pitch_scale = 1.3

[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/StartButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/StartButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/CharacterButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_character_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/CharacterButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_character_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/ExitButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/MainMenu/VBoxContainer/ExitButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/BackButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/BackButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer/PrevButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_prev_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer/PrevButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_prev_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer/NextButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_next_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/HSplitContainer/NextButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_next_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/SelectButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_select_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/SubViewportContainer/SubViewport/UI/CharacterMenu/SelectButton" to="CanvasLayer/SubViewportContainer/SubViewport/UI" method="_on_select_button_pressed"]
